# fastapi_learning

./: .env  .gitignore  README.md  logger_config.yaml  main.py  pyproject.toml  pytest.ini
sql_scripts/postgres/: 04_test_get_employees_stored_method.sql
src/fastapi_learning/: __init__.py
src/fastapi_learning/businesses/: app_business.py  base_business.py  base_validation.py  employees_mgr.py  employees_validation.py
src/fastapi_learning/common/: consts.py  jwt_utils.py  queue_logging.py  scope_utils.py
src/fastapi_learning/controllers/: __init__.py  admin.py  auth.py  employees_admin.py  required_login.py
src/fastapi_learning/models/: employees.py
src/fastapi_learning/static/js/: application.js
src/fastapi_learning/templates/: base.html
src/fastapi_learning/templates/admin/: me.html
src/fastapi_learning/templates/auth/: home.html  login.html
src/fastapi_learning/templates/emp/: insert.html  search.html  search_result.html  update.html
tests/: README.md  __init__.py  conftest.py
tests/business/: test_employees_mgr.py  test_employees_validation.py  test_scope_utils.py
tests/integration/: test_admin_itgt.py  test_api_itgt.py  test_auth_itgt.py  test_employees_itgt.py  test_expired_jwt.py  test_scope_permission_itgt.py  test_scope_ui_itgt.py
tests/unit/: test_employees.py
