[build-system]
requires      = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi_learning"
version = "0.0.0"
description = "Documentation of my FastAPI learning process. I document what I find necessary."

readme = "README.md"
authors = [{ name = "Van Be Hai Nguyen", email = "behai_nguyen@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["fastapi", "learning"]

dependencies = [
    'tomli; python_version >= "3.10"',
    'fastapi',
    'uvicorn[standard]',
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    'pytest',
    'httpx',
]

[project.urls]
repository = "https://github.com/behai-nguyen/fastapi_learning"
